--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ body {
       <h2>Home</h2>
       <h5>OrbitX</h5>
       <div class="fakeimg" style="height:200px;">Image</div>
-      <p>Welcome to OrbitX! Here you will find many useful tools, the main of which is help spelling. I will be droping something soon, stay tuned!</p>
+      <p>Welcome to OrbitX! Here you will find many useful tools, the main of which is help spelling. I will be dropping something soon, stay tuned!</p>
       
     </div>
     
